# Python_Everybody

JupyterLab_test/: pyproject.toml
Katas/: kata01_multiply_digits.py  kata02_text_capitalize.py  kata03.py  kata03_camelcase.py  kata04.py  kata04_accum_text.py  kata05_town_population.py  kata06_letters_sorted.py  kata07_text_multiply.py  kata08_url_domain.py  kata09_txt_alphabet.py  kata10_sorted_arr.py  kata11_mult3 and 5.py  kata12_last_digit.py  kata13_invert_words_ig.py  kata14_find_letter.py  kata15_trees.py  kata16_tree_max_num.py  kata17_data_dict.py  kata18_list_dict.py  kata19_sum_set.py  kata20_sum_nested_arr.py  kata21_list_sliciing.py  kata22_some_not_all.py  kata23_matrix.py  kata24_create_matrix.py  kata25_nested_list_high.py  kata26_max_repeat_lst.py  kata27_matrix_odd_even_sum.py  kata28_narcicistic_number.py  kata29_matrix_sum.py  kata30_matrix_sum2.py  kata31_operation_funct.py  kata31_pangram.py  kata32_num_list.py  kata33_city_coordenates.py  kata33_repeat_letters.py  kata34_unique_in_order.py  kata35_set_hour.py  kata36_invert_word.py  (+10 more)
Module02/: 02_files.py  03_files.py  04_test.py  05_test.py  07_tuples.py
Module02_data_structures/: 01_string.py  02_files.py  03_files.py  04_test.py  06_dict.py  07_tuples.py
module01/: 02_floor.py  03_grossPay.py  04_test.py  07_loop_example.py  08_loop.py
module01_basics/: 03_grossPay.py  05_test.py  06_functions.py  07_loop_example.py  08_loop.py
module03_web_data/: 01_sum_num.py  02_connection_example.py  03_sockets.py  04_urllib_decode.py  05_beautifulSoup.py  06_test_web_scraping.py  09_xml_test.py  (+4 more)
(+21 files in other folders)
