[tool.poetry]
name = "jupyterlab-test"
version = "0.1.0"
description = ""
authors = ["alancrisanto <alanvcrisanto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
dependency = "^0.0.3"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
